[gd_scene load_steps=9 format=2]

[ext_resource path="res://Engine/global.gd" type="Script" id=1]
[ext_resource path="res://Levels/Untitled.png" type="Texture" id=2]
[ext_resource path="res://vgafont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Levels/Button.gd" type="Script" id=4]
[ext_resource path="res://Levels/Level1.gd" type="Script" id=5]
[ext_resource path="res://Levels/Level2.gd" type="Script" id=6]
[ext_resource path="res://Levels/Level3.gd" type="Script" id=7]
[ext_resource path="res://Engine/star.png" type="Texture" id=8]

[node name="Level Select" type="Node2D"]

script = ExtResource( 1 )

[node name="Untitled" type="Sprite" parent="." index="0"]

position = Vector2( 300, 300 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 619.0
margin_right = 272.0
margin_bottom = 676.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = true
align = 1
script = ExtResource( 4 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Level1" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_top = 59.0
margin_right = 342.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 1"
flat = true
align = 1
script = ExtResource( 5 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Level2" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_top = 139.0
margin_right = 342.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 2"
flat = true
align = 1
script = ExtResource( 6 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Level3" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 134.0
margin_top = 219.0
margin_right = 342.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 3"
flat = true
align = 1
script = ExtResource( 7 )
_sections_unfolded = [ "custom_fonts" ]

[node name="hs1" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 438.0
margin_top = 64.0
margin_right = 953.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Highscore:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Instructions" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 356.0
margin_top = 476.0
margin_right = 1280.0
margin_bottom = 689.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Grow as large as you can! 
Press Space to shrink!
Click and Hold for a boost!
Get a high combo!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="hs2" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 438.0
margin_top = 144.0
margin_right = 953.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Highscore:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="hs3" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 438.0
margin_top = 224.0
margin_right = 953.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Highscore:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="level1star" type="Sprite" parent="." index="9"]

visible = false
position = Vector2( 374.036, 89.3002 )
texture = ExtResource( 8 )

[node name="level2star" type="Sprite" parent="." index="10"]

visible = false
position = Vector2( 374.036, 169.3 )
texture = ExtResource( 8 )

[node name="level3star" type="Sprite" parent="." index="11"]

visible = false
position = Vector2( 374.036, 241.3 )
texture = ExtResource( 8 )

[connection signal="pressed" from="Back" to="Back" method="_on_Back_pressed"]

[connection signal="pressed" from="Level1" to="Level1" method="_on_Level1_pressed"]

[connection signal="pressed" from="Level2" to="Level2" method="_on_Level2_pressed"]

[connection signal="pressed" from="Level3" to="Level3" method="_on_Level3_pressed"]


